# SIAOD_MIREA_3sem

./: .gitignore  CMakeLists.txt
1 Lab/: CMakeLists.txt  main.cpp
Lab1/: CMakeLists.txt  main.cpp  task.cpp
Lab1/Tests/: CMakeLists.txt  tests.cpp
Lab2/: CMakeLists.txt
Lab2/Task1/: CMakeLists.txt  TextWriter.cpp  TextWriter.h  UI.cpp  UI.h  main.cpp
Lab2/Task2/: Auto.cpp  Auto.h  BinWriter.cpp  BinWriter.h  CMakeLists.txt  ReaderSource.cpp  ReaderSource.h  Source.txt  UI.cpp  UI.h  main.cpp  src.txt  task.cpp  task2.cpp
Lab3/: CMakeLists.txt  Map.cpp  Map.h
Lab3/binFile/: Auto.cpp
Lab4/: CMakeLists.txt  Tree.cpp  Tree.h  UI.cpp  UI.h  binary_tree.cpp  binary_tree.h  node.cpp  node.h  tree_el.cpp  tree_el.h
Lab5/: CMakeLists.txt  Data.cpp  Data.h  UI.cpp  UI.h  main.cpp  test_10.txt  test_1000.txt  test_10000.txt  ui.cpp  ui.h
Lab5/File/: BinWriter.cpp  BinWriter.h
Lab5/Tree/: Tree.cpp  Tree.h  node.cpp  node.h
Lab5/TreeAVL/: TreeAVL.cpp  TreeAVL.h  nodeAVL.cpp  nodeAVL.h
Lab6/: CMakeLists.txt  Ui.cpp  Ui.h  grav.cpp  grav.h  main.cpp
Lab7/: CMakeLists.txt  Huffman.cpp  LZ.cpp  LZ77.cpp  LZ78.cpp  RLE.cpp  Shannon-Fano.cpp  ShannonFano.cpp  main.cpp
Lab7/Tree/: Tree.cpp  Tree.h  node.cpp  node.h  record.cpp  record.h
Lab8/: CMakeLists.txt  main.cpp
ThirdTask/: Auto.cpp  Auto.h  BinWriter.cpp  BinWriter.h  CMakeLists.txt  Data.cpp  Data.h  main.cpp  txt.txt
ThirdTask/BinWriter/: BinWriter.cpp  BinWriter.h  testBinF.cpp
ThirdTask/HashMap/: HeshTable.cpp  HeshTable.h  testHeshT.cpp
lab3/: Auto.h  main.cpp  txt.txt  txt2.txt
(+12 files in other folders)
