cmake_minimum_required(VERSION 3.20)
project(SIAOD)

set(CMAKE_CXX_STANDARD 23)
add_subdirectory(Lab1)

include(FetchContent)
FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG release-1.12.1
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)